--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n8n-nodes-mexc",
   "version": "0.1.0",
-  "description": "",
+  "description": "N8N node for trade spot on MEXC",
   "keywords": [
     "n8n-community-node-package"
   ],
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/glazecl/n8n-nodes-mexc.git"
+    "url": "https://github.com/glazec/n8n-nodes-mexc.git"
   },
   "main": "index.js",
   "scripts": {
